deploy: e3005549be4ed5c70079a4c68be4e188341ed4c6

--- a/defense.htm
+++ b/defense.htm
@@ -661,6 +661,9 @@ while a jump overcall is sound.
   <h2>
    Advances to (1X)-1Y
   </h2>
+  <h3>
+   High strains
+  </h3>
   <p>
    Raises are natural and non-forcing.  Note that the overcall occasionally
 contains only 4 cards.  We always raise to the 3-level with 4+ trumps.
@@ -755,6 +758,155 @@ adverse suit.
    </ul>
   </div>
   <p>
+   As 1Z is pretty similar to a direct overcall, aggressor somehow mirrors the
+auction but without Rubens advances.  Aggressor does not have a weak hand with
+6+# because they would have jumped in the first place.
+  </p>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (1m)-1Y-1M
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          1NT
+         </td>
+         <td>
+          NAT, at most 12 HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2m
+         </td>
+         <td>
+          LIM+, 3+ SUPP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2X
+         </td>
+         <td>
+          NAT, 9&ndash;14 points, 4+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2Y
+         </td>
+         <td>
+          NAT, 12&ndash;14 points, 6+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2Z
+         </td>
+         <td>
+          NAT, 12&ndash;17 points, 4+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2M
+         </td>
+         <td>
+          CONST, 3+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          NAT INV, 13&ndash;15 HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3m
+         </td>
+         <td>
+          CONST, 4+ SUPP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3X
+         </td>
+         <td>
+          NAT, 15&ndash;17 points, 4+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3Y
+         </td>
+         <td>
+          NAT, 15&ndash;17 points, 6+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3M
+         </td>
+         <td>
+          PRE, 4+#
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <h3>
+   Low strains
+  </h3>
+  <p>
    Let's reword the auction as (1Y)-1Z to discuss X, a suit lower than Y. X is
 always a minor suit.  We are more interested in 3NT than a minor suit game.
 Therefore, we bear the presence of a stopper in mind.  Sometimes we have to bid
@@ -797,6 +949,83 @@ can bid fairly naturally here.
     </li>
    </ul>
   </div>
+  <p>
+   Rebidding to a lower strain is similar to 2/1 or Drury.  Returning to the own
+suit is the weakest action.  If advancer has passed, it is also good to pass
+with a balanced minimum.
+  </p>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (1Y)-1M-2m
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2Y
+         </td>
+         <td>
+          F, 12&ndash;17 points
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2M
+         </td>
+         <td>
+          MIN, 9&ndash;11 points, 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          NAT INV, 12&ndash;14 HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3m
+         </td>
+         <td>
+          MIN, 9&ndash;11 points, usually 4+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3M
+         </td>
+         <td>
+          NAT, 15&ndash;17 points, 6+#
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <h3>
+   Middle strains
+  </h3>
   <p>
    The other suits are Rubens advances.  Cuebids and suits in between are
 transfers.  After rephrasing the auction as (1X)-1Z, Y is a suit in between.
