--- a/defense.htm
+++ b/defense.htm
@@ -1666,617 +1666,6 @@ investigation by simply accepting the transfer.
    </ul>
   </div>
   <h1>
-   Over artificial forcing (1
-   <span class="ccolor">
-    &clubs;
-   </span>
-   )
-  </h1>
-  <p>
-   Our defense was derived from Terrorist's Moscito.  Note that we also use this
-defense even when opponents' 1
-   <span class="ccolor">
-    &clubs;
-   </span>
-   is not necessarily strong (e.g. Polish Club).
-  </p>
-  <p>
-   We pass strong hands since we are always given a chance to bid again.  This is
-arguably the only sane usage of coming out after a pass.
-  </p>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     (1
-     <span class="ccolor">
-      &clubs;
-     </span>
-     )
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          Dbl
-         </td>
-         <td>
-          !CONST TRF, 4+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !CONST TRF, 4+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          !PRE, 4+
-          <span class="hcolor">
-           &hearts;
-          </span>
-          , 4+m
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          !PRE, 4+
-          <span class="scolor">
-           &spades;
-          </span>
-          , 4+m
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1NT
-         </td>
-         <td>
-          !PRE, 4+
-          <span class="scolor">
-           &spades;
-          </span>
-          4+
-          <span class="hcolor">
-           &hearts;
-          </span>
-          or 4+
-          <span class="dcolor">
-           &diams;
-          </span>
-          4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2X
-         </td>
-         <td>
-          PRE 5+#
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     (1
-     <span class="ccolor">
-      &clubs;
-     </span>
-     )-Dbl
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !NF NEG, 0&ndash;2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          PRE, 3&ndash;4
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          F, 4+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1NT
-         </td>
-         <td>
-          !INV+ TRF, 4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !INV+ TRF, 4+
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !INV+ TRF, 3+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          PRE, 4&ndash;5
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          PRE, 6+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          !TRF, FG 6+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          or PRE 7+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !TRF, FG 6+
-          <span class="dcolor">
-           &diams;
-          </span>
-          or PRE 7+
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !TRF, mixed raise, UNBAL 4+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          PRE, UNBAL 5+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     (1
-     <span class="ccolor">
-      &clubs;
-     </span>
-     )-1
-     <span class="dcolor">
-      &diams;
-     </span>
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          !NF NEG, 0&ndash;2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          PRE, 3&ndash;4
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          1NT
-         </td>
-         <td>
-          !INV+ TRF, 4+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !INV+ TRF, 4+
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !INV+ TRF, 5+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          !INV+ TRF, 3+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          PRE, 4&ndash;5
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          !TRF, FG 6+
-          <span class="ccolor">
-           &clubs;
-          </span>
-          or PRE 7+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          !TRF, FG 6+
-          <span class="dcolor">
-           &diams;
-          </span>
-          or PRE 7+
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="dcolor">
-           &diams;
-          </span>
-         </td>
-         <td>
-          !TRF, FG 6+
-          <span class="hcolor">
-           &hearts;
-          </span>
-          or PRE 7+
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="hcolor">
-           &hearts;
-          </span>
-         </td>
-         <td>
-          !TRF, mixed raise, UNBAL 4+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-         <td>
-          PRE, UNBAL 5+
-          <span class="scolor">
-           &spades;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <h1>
    Over strong notrump
   </h1>
   <p>
@@ -2661,7 +2050,7 @@ still threat to stop in our natural 2
           Dbl
          </td>
          <td>
-          T/O 26+ ZP (12+ HCP) or any 36+ ZP (19+ HCP)
+          T/O, 13+ points
          </td>
         </tr>
        </table>
@@ -2673,7 +2062,7 @@ still threat to stop in our natural 2
           2Z
          </td>
          <td>
-          5+#, 26&ndash;35 ZP (12&ndash;18 HCP)
+          NAT, 13&ndash;18 points, 5+#
          </td>
         </tr>
        </table>
@@ -2685,7 +2074,7 @@ still threat to stop in our natural 2
           2NT
          </td>
          <td>
-          30&ndash;35 ZP (16&ndash;18 HCP) w/ likely stop
+          NAT, 16&ndash;18 HCP
          </td>
         </tr>
        </table>
@@ -2697,7 +2086,7 @@ still threat to stop in our natural 2
           3X
          </td>
          <td>
-          5+#, 26&ndash;35 ZP (12&ndash;18 HCP), FREQ 6+#
+          NAT, 14&ndash;17 HCP, often 6+#
          </td>
         </tr>
        </table>
@@ -2706,10 +2095,10 @@ still threat to stop in our natural 2
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3Z
+          3Y
          </td>
          <td>
-          6+#, 30&ndash;35 ZP (15&ndash;18 HCP)
+          !Ask for stopper, SOL 7+ suit or STR T/O
          </td>
         </tr>
        </table>
@@ -2718,10 +2107,10 @@ still threat to stop in our natural 2
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3NT
+          3Z
          </td>
          <td>
-          36+ ZP (20+ HCP) or trick-based w/ likely stop
+          NAT, 15&ndash;17 HCP, 6+#
          </td>
         </tr>
        </table>
@@ -2735,18 +2124,6 @@ still threat to stop in our natural 2
     <li class="root">
      (2m)
      <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3m
-         </td>
-         <td>
-          !Ask for stopper
-         </td>
-        </tr>
-       </table>
-      </li>
       <li class="node">
        <table>
         <tr>
@@ -2766,14 +2143,26 @@ still threat to stop in our natural 2
         </tr>
        </table>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
           4om
          </td>
          <td>
-          !Leaping Michaels, 5+#, 5+M
+          !Leaping Michaels, 5+M, usually 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4NT
+         </td>
+         <td>
+          !NF S/T in om
          </td>
         </tr>
        </table>
@@ -2794,11 +2183,11 @@ still threat to stop in our natural 2
           3M
          </td>
          <td>
-          !Leaping Michaels, 5+
+          !Ask for stopper, SOL 7+ suit or STR 4+
           <span class="dcolor">
            &diams;
           </span>
-          , 5+
+          4+
           <span class="ccolor">
            &clubs;
           </span>
@@ -2813,7 +2202,27 @@ still threat to stop in our natural 2
           4m
          </td>
          <td>
-          !Leaping Michaels, 5+#, 5+oM
+          !Leaping Michaels, 5+oM, usually 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4M
+         </td>
+         <td>
+          !Leaping Michaels, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+          , 5+
+          <span class="ccolor">
+           &clubs;
+          </span>
+          , usually unstopped
          </td>
         </tr>
        </table>
@@ -2822,10 +2231,17 @@ still threat to stop in our natural 2
        <table>
         <tr>
          <td class="node" rowspan="1">
-          4M
+          4NT
          </td>
          <td>
-          !STR T/O
+          !NF UNT with stopper, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+          , 5+
+          <span class="ccolor">
+           &clubs;
+          </span>
          </td>
         </tr>
        </table>
