deploy: 09949ddd93677b5b0082d9cf4789ab31163f71f4

--- a/defense.htm
+++ b/defense.htm
@@ -2276,6 +2276,34 @@ contract more often than not.
   <div class="tree">
    <ul>
     <li class="root">
+     (2
+     <span class="ccolor">
+      &clubs;
+     </span>
+     )-Dbl
+     <ul>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !FG STAY
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
      (2Y)-Dbl
      <ul>
       <li class="node">
@@ -2455,97 +2483,6 @@ contract more often than not.
          </td>
          <td>
           !Ask for stopper, usually a long minor suit
-         </td>
-        </tr>
-       </table>
-      </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <h1>
-   Over strong (2
-   <span class="ccolor">
-    &clubs;
-   </span>
-   )
-  </h1>
-  <p>
-   We simply play Mathe with follow-ups same as Landy over (2
-   <span class="ccolor">
-    &clubs;
-   </span>
-   ).  The strong 2
-   <span class="ccolor">
-    &clubs;
-   </span>
-   is already self-preemptive, so we don't need to worry about that.
-  </p>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     (2
-     <span class="ccolor">
-      &clubs;
-     </span>
-     )
-     <ul>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          Dbl
-         </td>
-         <td>
-          !Mathe/Landy, (54)+ in majors
-         </td>
-        </tr>
-       </table>
-       <ul>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2
-            <span class="dcolor">
-             &diams;
-            </span>
-           </td>
-           <td>
-            !Equal preference
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
-      </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2X
-         </td>
-         <td>
-          5+#
-         </td>
-        </tr>
-       </table>
-      </li>
-      <li class="last node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          2NT
-         </td>
-         <td>
-          !UNT, 5+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
          </td>
         </tr>
        </table>
