--- a/wj.htm
+++ b/wj.htm
@@ -909,13 +909,13 @@ HCP) for their level.
           </span>
          </td>
          <td>
-          !INV, 9&ndash;11 HCP, 5+
-          <span class="dcolor">
-           &diams;
+          !P/C, 7&ndash;9 HCP, 4+
+          <span class="hcolor">
+           &hearts;
           </span>
-          , 4+
-          <span class="ccolor">
-           &clubs;
+          , 5+
+          <span class="scolor">
+           &spades;
           </span>
          </td>
         </tr>
@@ -931,17 +931,24 @@ HCP) for their level.
           </span>
          </td>
          <td>
-          !INV, 9&ndash;11 HCP, 4+
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 5+
-          <span class="ccolor">
-           &clubs;
-          </span>
+          !INV, 9&ndash;11 HCP, 5+ 4+ in minors
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            2NT
+           </td>
+           <td>
+            !Ask for the better minor
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
