--- a/wj.htm
+++ b/wj.htm
@@ -843,7 +843,7 @@ HCP) for their level.
           1NT
          </td>
          <td>
-          BAL INV, 9&ndash;11 HCP, 2&ndash;3
+          BAL CONST, 7&ndash;10 HCP, 2&ndash;3
           <span class="scolor">
            &spades;
           </span>
@@ -931,24 +931,17 @@ HCP) for their level.
           </span>
          </td>
          <td>
-          !INV, 9&ndash;11 HCP, 5+ 4+ in minors
+          !INV, 9&ndash;11 HCP, 0&ndash;3
+          <span class="scolor">
+           &spades;
+          </span>
+          , 0&ndash;3
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
-       <ul>
-        <li class="last node">
-         <table>
-          <tr>
-           <td class="node" rowspan="1">
-            2NT
-           </td>
-           <td>
-            !Ask for the better minor
-           </td>
-          </tr>
-         </table>
-        </li>
-       </ul>
       </li>
       <li class="node">
        <table>
@@ -1720,7 +1713,7 @@ auction.
           </span>
          </td>
          <td>
-          NF, 7&ndash;9 HCP, 5+
+          NF, 7&ndash;9 HCP, 6+
           <span class="dcolor">
            &diams;
           </span>
@@ -1783,41 +1776,19 @@ auction.
         </tr>
        </table>
       </li>
-      <li class="node">
-       <table>
-        <tr>
-         <td class="node" rowspan="1">
-          3
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-         <td>
-          NF, 7&ndash;9 HCP, 3+
-          <span class="ccolor">
-           &clubs;
-          </span>
-         </td>
-        </tr>
-       </table>
-      </li>
       <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
           3
-          <span class="dcolor">
-           &diams;
+          <span class="ccolor">
+           &clubs;
           </span>
          </td>
          <td>
-          NF, 6&ndash;9 HCP, 7+
-          <span class="dcolor">
-           &diams;
-          </span>
-          or S-SOL 6+
-          <span class="dcolor">
-           &diams;
+          NF, 7&ndash;9 HCP, 4+
+          <span class="ccolor">
+           &clubs;
           </span>
          </td>
         </tr>
@@ -5581,7 +5552,7 @@ fairly naturally.
           </span>
          </td>
          <td>
-          MIN, 12&ndash;14 HCP, 6+
+          INV, 15&ndash;17 HCP, 5+
           <span class="ccolor">
            &clubs;
           </span>
@@ -5650,7 +5621,7 @@ fairly naturally.
           2NT
          </td>
          <td>
-          BAL INV, ~14 HCP
+          INV, 15&ndash;17 HCP, (441)4
          </td>
         </tr>
        </table>
