--- a/wj.htm
+++ b/wj.htm
@@ -1713,7 +1713,7 @@ auction.
           </span>
          </td>
          <td>
-          NF, 7&ndash;9 HCP, 6+
+          NF, 5&ndash;9 HCP, 6+
           <span class="dcolor">
            &diams;
           </span>
@@ -1764,7 +1764,7 @@ auction.
           2NT
          </td>
          <td>
-          !PRE, 3+
+          !TRF, 5&ndash;7 HCP, 3+
           <span class="ccolor">
            &clubs;
           </span>
@@ -1776,7 +1776,7 @@ auction.
         </tr>
        </table>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -1789,6 +1789,24 @@ auction.
           NF, 7&ndash;9 HCP, 4+
           <span class="ccolor">
            &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          NF, 7&ndash;9 HCP, 7+
+          <span class="dcolor">
+           &diams;
           </span>
          </td>
         </tr>
