deploy: 98ad28e05e09cd1682c4ddbe8230c17094a3fbaa

--- a/defense.htm
+++ b/defense.htm
@@ -1155,10 +1155,13 @@ investigation by simply accepting the transfer.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          2NT
+          4
+          <span class="ccolor">
+           &clubs;
+          </span>
          </td>
          <td>
-          NAT INV
+          !Gerber BW
          </td>
         </tr>
        </table>
@@ -1167,13 +1170,107 @@ investigation by simply accepting the transfer.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3NT
+          4
+          <span class="dcolor">
+           &diams;
+          </span>
          </td>
          <td>
-          S/O
+          !Texas TRF, 6+
+          <span class="hcolor">
+           &hearts;
+          </span>
          </td>
         </tr>
        </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          !Texas TRF, 6+
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !F QUANT
+         </td>
+        </tr>
+       </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            4NT
+           </td>
+           <td>
+            !NF, 15&ndash;16 HCP
+           </td>
+          </tr>
+         </table>
+         <ul>
+          <li class="node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              5NT
+             </td>
+             <td>
+              !F to a 5-card suit or 6NT
+             </td>
+            </tr>
+           </table>
+          </li>
+          <li class="last node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              7
+              <span class="ccolor">
+               &clubs;
+              </span>
+             </td>
+             <td>
+              !P/C to a 5-card suit or 7NT
+             </td>
+            </tr>
+           </table>
+          </li>
+         </ul>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            5NT
+           </td>
+           <td>
+            !F, 17 HCP
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -1182,10 +1279,24 @@ investigation by simply accepting the transfer.
           4NT
          </td>
          <td>
-          QUANT INV to 6NT
+          QUANT INV to 6NT, NF
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6NT
+           </td>
+           <td>
+            S/O, 16&ndash;17 HCP
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="last node">
        <table>
@@ -1194,10 +1305,36 @@ investigation by simply accepting the transfer.
           5NT
          </td>
          <td>
-          QUANT INV to 7NT
+          QUANT INV to 7NT, F
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            6NT
+           </td>
+           <td>
+            S/O, 15 HCP
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            7NT
+           </td>
+           <td>
+            S/O, 16&ndash;17 HCP
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
      </ul>
     </li>
