--- a/defense.htm
+++ b/defense.htm
@@ -1838,6 +1838,238 @@ of games with 3 hearts.
     </li>
    </ul>
   </div>
+  <p>
+   Our agreement that slow 3NT has 3= hearts persists if RHO bids up to 2NT.
+  </p>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (1
+     <span class="scolor">
+      &spades;
+     </span>
+     )-1NT-(2
+     <span class="scolor">
+      &spades;
+     </span>
+     )
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          !TRF Lebensohl
+         </td>
+        </tr>
+       </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !P/C
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="dcolor">
+             &diams;
+            </span>
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+           <td>
+            S/O
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+           <td>
+            !SPL, 0&ndash;1
+            <span class="scolor">
+             &spades;
+            </span>
+            , 0&ndash;3
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+         <ul>
+          <li class="last node">
+           <table>
+            <tr>
+             <td class="node" rowspan="1">
+              3NT
+             </td>
+             <td>
+              !Choice of games, 3=
+              <span class="hcolor">
+               &hearts;
+              </span>
+             </td>
+            </tr>
+           </table>
+          </li>
+         </ul>
+        </li>
+       </ul>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !TRF INV+, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !TRF INV+, 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          !FG STAY, 4=
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !SPL, 0&ndash;1
+          <span class="scolor">
+           &spades;
+          </span>
+          , 4=
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (1
+     <span class="scolor">
+      &spades;
+     </span>
+     )-1NT-(2NT)-(3
+     <span class="scolor">
+      &spades;
+     </span>
+     )-Pass
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          Dbl
+         </td>
+         <td>
+          PEN, 3=
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3NT
+         </td>
+         <td>
+          !Choice of games, 3=
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <p>
+   I have not yet come up with how we utilize the slow cuebid.
+  </p>
   <div class="tree">
    <ul>
     <li class="root">
